# cpp-backend

.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/data/: config.json
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_serializer.cpp  json_serializer.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  sdk.h
sprint1/problems/map_json/solution/src/: json_loader.cpp  json_serializer.h  request_handler.h
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/src/: main.cpp
sprint2/problems/final_task/src/app/: app.h  game_session.h  player.h
sprint2/problems/final_task/src/logger/: report.cpp  report.h
sprint2/problems/final_task/src/model/: map.h  units.cpp
sprint2/problems/final_task/src/serde/: json.cpp
sprint2/problems/final_task/src/time/: ticker.h
sprint2/problems/final_task/src/utils/: error.cpp
sprint2/problems/final_task/src/web/: core.h  listener.h  server.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/app/: app.h  game_session.h  player.h
sprint2/problems/join_game/solution/src/handlers/: request_handler.h
sprint2/problems/join_game/solution/src/model/: dog.h  map.h  road.h  units.h
sprint2/problems/join_game/solution/src/serde/: json.cpp  json.h
sprint2/problems/join_game/solution/src/utils/: tagged.h  thread.h
sprint2/problems/join_game/solution/src/web/: session.h  utils.h
sprint2/problems/logger/solution/: CMakeLists.txt  main.cpp  my_logger.h
sprint2/problems/move_players/solution/: Dockerfile
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  json_logger.cpp  json_logger.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/final_task/: CMakeLists.txt
sprint3/problems/final_task/src/app/: app.h
sprint3/problems/final_task/src/model/physics/: collision.h
sprint3/problems/final_task/src/utils/: random.h
sprint3/problems/final_task/src/web/: session.cpp
sprint3/problems/final_task/tests/: collision_tests.cpp
sprint3/problems/find_return/solution/: Dockerfile
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather/solution/: Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/app/: game_session.h
sprint3/problems/gen_objects/solution/src/cli/: parse.h
sprint3/problems/gen_objects/solution/src/model/: building.h  loot_type.h  lost_object.h  map.h  office.h
sprint3/problems/gen_objects/solution/src/serde/: json.cpp
sprint3/problems/gen_objects/solution/src/web/: response_builder.h  utils.cpp
sprint3/problems/instrumentation/solution/: report
sprint3/problems/load/solution/: load.yaml
sprint3/problems/stress/solution/: ammo.txt  load.yaml
sprint3/problems/tv/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/db_of_books/solution/src/: controllers.h  database.h  main.cpp  model.h  serde.cpp  serde.h
sprint4/problems/final_task/: Dockerfile  conanfile.txt
sprint4/problems/final_task/tests/: state-serialization-tests.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/src/: main.cpp
sprint4/problems/leave_game/solution/src/app/: app.h  player.h  use_cases_impl.h
sprint4/problems/leave_game/solution/src/app/controllers/: game_sessions_controller.h  player_controller.h
sprint4/problems/leave_game/solution/src/datetime/: ticker.h
sprint4/problems/leave_game/solution/src/handlers/: api_handler.cpp
sprint4/problems/leave_game/solution/src/logger/: json.h
sprint4/problems/leave_game/solution/src/model/: dog.h  game_session.h  loot_type.h  lost_object.h  lost_objects_bag.h  units.h
sprint4/problems/leave_game/solution/src/model/physics/: collision.cpp
sprint4/problems/leave_game/solution/src/postgres/: connection_pool.h  consts.h  database.h  player_record.cpp
sprint4/problems/leave_game/solution/src/serde/: json.cpp  json.h
sprint4/problems/leave_game/solution/src/serde/archive/: lost_objects_bag.h
sprint4/problems/leave_game/solution/src/utils/: tagged_uuid.h
sprint4/problems/leave_game/solution/src/web/: core.h  server.h  utils.cpp
sprint4/problems/leave_game/solution/tests/: state-serialization-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
(+170 files in other folders)
